app/assets/stylesheets/redesign/base/_buttons.scss
/* [Buttons]
-------------------------------------------------------*/
// TODO: use mixing for these, rename variations and create disabled state
.btn {
  padding: 10px 40px;
  font-size: 1.6rem;
  line-height: 1.6;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: 1px;
  border-radius: 0;
}

.btn-default {
  color: $c-neutral-white;
  background: $c-neutral-8;
  border-color: transparent;

  &:hover,
  &:focus,
  &:active,
  &.active {
    color: $c-neutral-white;
    background: $c-neutral-6;
    border-color: transparent;
  }

}

.btn-primary {
  color: $c-neutral-white;
  background: #337ab7;
  border-color: #2e6da4;

  &:hover,
  &:focus,
  &:active,
  &.active {
    color: $c-neutral-white;
    background: #286090;
    border-color: #204d74;
  }

}

.btn-secondary {
  color: $c-neutral-white;
  background-color: $c-brand-blue;
  border-color: transparent;

  &:hover,
  &:focus,
  &:active,
  &.active {
    color: $c-neutral-white;
    background: $c-brand-blue-pale;
    border-color: transparent;
  }

}

.btn-lowlight {
  color: $c-neutral-black;
  background: $c-neutral-white;
  border-color: $c-neutral-black;

  &:hover,
  &:focus,
  &:active,
  &.active {
    color: $c-neutral-black;
    background: $c-neutral-2;
    border-color: $c-neutral-black;
  }

}

.btn-transparent {
  color: $c-neutral-black;
  background: transparent;
  border-color: $c-neutral-black;

  &:hover,
  &:focus,
  &:active,
  &.active {
    color: $c-neutral-12;
    background: transparent;
    border-color: $c-neutral-12;
  }

}

.btn-black {
  background: $c-neutral-black;
  color: $c-neutral-white;

  &:hover,
  &:focus,
  &:active,
  &.active {
    background: $c-neutral-12;
    color: $c-neutral-white;
  }

  &.btn-loading {

    &,
    &:hover,
    &:focus,
    &:active,
    &.active {
      background: $c-neutral-black;
    }

  }

}

.btn-close {
  display: inline-block;
  position: relative;
  width: 18px;
  height: 18px;

  &:before,
  &:after {
    position: absolute;
    left: 7px;
    content: ' ';
    height: 19px;
    width: 1px;
    background: $c-neutral-black;
  }

  &:before {
    transform: rotate(45deg);
  }

  &:after {
    transform: rotate(-45deg);
  }

  &:hover,
  &:focus,
  &:active,
  &.active {
    opacity: .6;
  }

  &.sml {
    width: 14px;
    height: 14px;

    &:before,
    &:after {
      left: 6px;
      height: 15px;
    }

  }

  &.md {
    width: 30px;
    height: 30px;

    &:before,
    &:after {
      left: 13px;
      height: 31px;
    }

  }

  &.lg {
    width: 50px;
    height: 50px;

    &:before,
    &:after {
      left: 20px;
      height: 51px;
    }

  }

}

.btn-multiline {
  max-width: 100%;
  height: auto;
  white-space: normal;
}

// TODO: marge this with .btn-close
.close {
  opacity: 0.7;

  img {
    width: 20px;
    height: 20px;
  }

}

.btn-add {
  display: block;
  width: 30px;
  height: 30px;
  line-height: 30px;
  text-align: center;
  font-size: 1.688em;
  font-weight: 300;
  color: $c-neutral-black;
  background: $c-neutral-white;
  border: solid $c-neutral-black 1px;

  &:hover,
  &:focus {
    color: $c-neutral-black;
    background: $c-neutral-2;
  }

}

.cta-square {
  display: table;
  padding: 10px;
  width: 110px;
  height: 110px;
  text-transform: uppercase;
  text-align: center;
  font-size: 0.875em;
  font-weight: 500;
  color: $c-neutral-black;
  border: solid $c-neutral-black 1px;

  span {
    display: table-cell;
    vertical-align: middle;
  }

  &:hover,
  &:focus {
    color: $c-neutral-black;
    opacity: .8;
  }

  &.skin-light,
  &.skin-light:hover,
  &.skin-light:focus {
    color: $c-neutral-white;
    border-color: $c-neutral-white;
  }

  @include mobile {

    & {
      width: 130px;
      height: 130px;
      font-size: 1em;
    }

  }

}

.btn-lg,
.btn-group-lg > .btn {
  padding: 10px 16px;
  font-size: 20px;
}

.btn-sm,
.btn-group-sm > .btn {
  font-size: 14px;
}

.btn-xs,
.btn-group-xs > .btn {
  font-size: 1.2rem;
}

//Hero section button
.btn-featured {
  color: $c-neutral-black;
  font-family: $font-heading !important;
  font-weight: 500;
  font-style: italic;
  text-transform: none;
  background: none;
  border: 1px solid $c-neutral-8;
  margin-top: 25px;
  padding: 10px 22px;
  display: inline-block;
  border-radius: 0;

  &.white-txt-border {
    color: $c-neutral-white;
    border: 1px solid $c-neutral-white;
  }

}

